# ai-video-editor

./: .gitignore  README.md  brief.md  brief_full.md  build.gradle.kts  download_models.ps1  pyproject.toml  run_pipeline.py  settings.gradle.kts
.ai-agent/memory/: api_contracts.json  architecture_map.json  change_log.json  completeness_matrix.json  completeness_report.md  detailed_inventory.json  engineering_guidance.json  feature_catalog.json  flow_map.json  instincts.json  lessons.json  manual_smoke_checklist.md  memory.json  progress_checklist.md  project_graph.json  project_graph_summary.json  project_manifest.json  project_metrics.json  query_index.json  symbol_index.json
CONFIG/: overrides.json  settings.json
MEMORY/: best_performance.json  style_profile.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/changecut/app/: ChangeCutApp.kt  MainActivity.kt
app/src/main/java/com/changecut/app/di/: AppModule.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
common/: build.gradle.kts
common/src/main/java/com/changecut/common/: Constant.kt
core/: build.gradle.kts
data/: build.gradle.kts
domain/: build.gradle.kts
feature-auth/: build.gradle.kts
feature-editor/: build.gradle.kts
feature-export/: build.gradle.kts
feature-home/: build.gradle.kts
gradle/: libs.versions.toml
src/ai_video_editor/: __init__.py  cli.py  langchain_orchestrator.py  pipeline.py
tests/: test_pipeline.py
(+128 files in other folders)
